--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Portafolio</title>
+  <title>LMKBOOK</title>
 </head>
 <body>
   <h1>¡Hola, soy Daad!</h1>
