--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>LMKBOOK</title>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LMKBOOK</title>
 </head>
 <body>
-  <h1>¡Hola, soy Daad!</h1>
-  <p>Este es mi portafolio.</p>
+    <div class="wrapper">
+        <div>
+            <ul class="nav nav-tabs">
+               <li class="nav-item">
+                    <a class="nav-link active" aria-current="page">LMKBOOK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CV</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Estudios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contactame</a>
+                </li>
+            </ul>
+        </div>
+        <div class="main container">
+            <div id="container">
+                <p>
+                    Soy Juan David Camargo Rendón, desarrollador junior con una mentalidad creativa y proactiva.<br>
+                    Me destaco por tener buenas habilidades interpersonales, lo que me permite integrarme con facilidad <br>
+                    en equipos de trabajo y contribuir a un buen ambiente colaborativo. Me apasiona el mundo del <br>
+                    desarrollo de software y disfruto aprender nuevas tecnologías, resolver problemas y crear soluciones<br>
+                    que tengan impacto. Actualmente estoy en proceso de fortalecer mis conocimientos en programación <br>
+                    y desarrollo de aplicaciones, con enfoque en buenas prácticas, lógica y mejora continua. Me considero <br>
+                    una persona comprometida, con ganas de crecer profesionalmente y aportar valor a cada proyecto en el que participo.<br>
+                </p>
+            </div>
+            <div>
+               <img src="img/profile.png" class="img-perfil mx-auto d-block" alt="Foto de Perfil" style="width: 200px;">
+            </div>
+        </div>
+        <footer>
+            &copy; 2025 LMKBOOK. Todos los derechos reservados.
+        </footer>
+    </div>
+    
 </body>
 </html>
